feat: 修复CORS配置并完成前端登录注册页面开发
## 主要更新

### 🔧 后端修复
- 修复CORS配置：从使用通配符"*"改为从环境变量读取具体的允许源
- 解决了CORS预检请求失败导致前端无法调用后端API的问题
- SecurityConfig.java中添加@Value注解注入app.cors.allowed-origins配置
- 更新.env文件，添加端口5174到CORS允许列表

### 🎨 前端开发
- 使用Vue 3 + TypeScript + Vite + Ant Design Vue创建前端应用
- 实现登录页面（/login）和注册页面（/register）
- 实现受保护的首页（/），显示用户信息
- 集成Pinia状态管理，处理认证状态
- 配置Vue Router，添加路由守卫保护受保护页面
- 配置axios，自动注入JWT token到请求头
- 添加前端调试日志，便于排查网络请求问题

### 🧪 测试更新
- 添加application-test.properties配置文件，解决Flyway与H2兼容性问题
- 更新单元测试，使用@MockBean模拟依赖
- 添加前后端集成测试报告

### ⚙️ 项目配置
- 添加.java-version文件，指定Java 17
- 添加.sdkmanrc文件，配置SDKMAN
- 更新测试报告文档

## 技术栈
- 前端：Vue 3.5.30, TypeScript 5.9.3, Vite 8.0.0, Ant Design Vue 4.2.6, Pinia 3.0.4
- 后端：Spring Boot 3.2.2, Java 17

## 已解决问题
✅ CORS预检请求失败
✅ 前端无法连接到后端API
✅ Flyway迁移与H2数据库兼容性
✅ 路径别名解析错误

🤖 Generated with Claude Code

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>